fix(mobile-usability): adjusted icon spacing

--- a/index.css
+++ b/index.css
@@ -1,34 +1,34 @@
-/* font-family: 'IBM Plex Mono', monospace;
-
-font-family: 'Press Start 2P', cursive; */
 *{
-    margin:0;
-    padding: 0;
-    background-color: #F5F5F5;
+  margin:0;
+  padding: 0;
+  background-color: #F5F5F5;
 }
 
 a{
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 600px;
 }
 
 .intro{
-    font-family: 'Press Start 2P', cursive; 
-    font-size: 62px;
-    color: #0453E3;
+  font-family: 'Press Start 2P', cursive; 
+  font-size: 62px;
+  color: #0453E3;
 }
 
 .blurb{
-    vertical-align: middle;
-    padding: 50px 0px;
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 25px;
+  vertical-align: middle;
+  padding: 50px 0px;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 25px;
 }
 
+.icons{
+  padding: 20px;
+}
